selfhost/test/lexer/ints_error_invalid_binary_first.out
Error at %FILE_NAME%:1:3
Unexpected character '2':
  |  0b2
       ^